erDiagram
    Socios {
        int socio_id PK
        varchar nombre
        varchar apellido
        varchar dni
        varchar email
        varchar telefono
        date fecha_nacimiento
        varchar domicilio
        varchar contacto_emergencia
        datetime fecha_registro
    }

    Membresias {
        int membresia_id PK
        int socio_id FK
        int plan_id FK
        date fecha_inicio
        date fecha_vencimiento
        varchar estado "activo, vencido, congelado"
    }

    Planes {
        int plan_id PK
        varchar nombre
        varchar tipo "tiempo, clases"
        int duracion_dias
        int cantidad_clases
        decimal precio
    }

    Pagos {
        int pago_id PK
        int membresia_id FK
        int venta_id FK
        decimal monto
        varchar metodo_pago
        datetime fecha_pago
    }

    Asistencias {
        int asistencia_id PK
        int socio_id FK
        datetime fecha_hora_ingreso
    }

    Notas_Cliente {
        int nota_id PK
        int socio_id FK
        text contenido
        datetime fecha_creacion
        bool visible_cliente
    }

    Productos {
        int producto_id PK
        varchar nombre
        varchar categoria
        text descripcion
        decimal precio
        int stock
    }

    Ventas_POS {
        int venta_id PK
        int socio_id FK "Nullable"
        datetime fecha_venta
        decimal total
    }

    Detalle_Ventas {
        int detalle_id PK
        int venta_id FK
        int producto_id FK
        int cantidad
        decimal precio_unitario
    }

    Socios ||--o{ Membresias : "tiene"
    Planes ||--o{ Membresias : "es de tipo"
    Membresias ||--o{ Pagos : "se paga con"
    Socios ||--o{ Asistencias : "registra"
    Socios ||--o{ Notas_Cliente : "tiene"
    Socios ||--o{ Ventas_POS : "realiza"
    Ventas_POS ||--o{ Detalle_Ventas : "contiene"
    Productos ||--o{ Detalle_Ventas : "forma parte de"
    Ventas_POS ||--o{ Pagos : "se liquida en"
